Refactor semantic checkbox, input, loader, rating, textarea components into our codebase

--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -2,10 +2,10 @@
   (ngSubmit)="submitForm()"
   #form="ngForm"
   class="ui form">
-  <sm-loader
+  <basic-loader
     [complete]="!loadingSubmit"
     class="inverted">
-  </sm-loader>
+  </basic-loader>
 
   <div class="ui basic center aligned segment">
 
