--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -3,10 +3,10 @@
   #form="ngForm"
   class="ui form">
 
-  <sm-loader
+  <basic-loader
     [complete]="!loadingSubmit"
     class="inverted">
-  </sm-loader>
+  </basic-loader>
 
   <form-section-title-text
     [text]="'user.settings.form.personal.info.header' | translate"
