--- a/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
+++ b/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
@@ -3,10 +3,10 @@
   (ngSubmit)="submitForm()"
   #form="ngForm"
   class="ui form">
-  <sm-loader
+  <basic-loader
     [complete]="!loadingSubmit"
     class="inverted transparent">
-  </sm-loader>
+  </basic-loader>
 
   <success-message
     *ngIf="informationProvided"
