--- a/src/app/components/links/basic-link/basic-link.component.scss
+++ b/src/app/components/links/basic-link/basic-link.component.scss
@@ -23,15 +23,15 @@
 }
 
 .small {
-  font-size: 12px;
+  font-size: 12px !important;
 }
 
 .medium {
-  font-size: 14px;
+  font-size: 14px !important;
 }
 
 .large {
-  font-size: 16px;
+  font-size: 16px !important;
 }
 
 .light {
