Initial new menu version

--- a/src/app/components/cards/application-status-card/application-status-card.component.scss
+++ b/src/app/components/cards/application-status-card/application-status-card.component.scss
@@ -35,7 +35,7 @@
   }
 
   .job-item-label-will-perform-container {
-    background: $color-primary-cerise;
+    background: $color-cerise-500;
   }
 
   .job-item-label-rejected-container {
