--- a/src/app/components/layouts/default-layout/default-layout.component.scss
+++ b/src/app/components/layouts/default-layout/default-layout.component.scss
@@ -21,7 +21,7 @@
 
     .layout-header-padder {
       display: table-row;
-      height: $header-height;
+      height: $navbar-height;
     }
 
     .layout-content {
