--- a/src/app/components/pagers/basic-pager/basic-pager.component.scss
+++ b/src/app/components/pagers/basic-pager/basic-pager.component.scss
@@ -14,7 +14,7 @@
 
 .back-button {
   text-align: left;
-  color: $color-primary-cerise;
+  color: $color-cerise-500;
 
   > i {
     cursor: pointer;
@@ -24,7 +24,7 @@
 
 .forward-button {
   text-align: right;
-  color: $color-primary-cerise;
+  color: $color-cerise-500;
 
   > i {
     cursor: pointer;
@@ -39,7 +39,7 @@
 }
 
 .pagination-button {
-  color: $color-primary-cerise;
+  color: $color-cerise-500;
   cursor: pointer;
 }
 
