--- a/src/app/components/pages/contact-page/contact-page.component.scss
+++ b/src/app/components/pages/contact-page/contact-page.component.scss
@@ -17,7 +17,7 @@
     text-align: center;
 
     .contact-form-icon {
-      color: $color-primary-cerise;
+      color: $color-cerise-500;
     }
   }
 }
