--- a/src/app/components/sections/welcome-banner-section/welcome-banner-section.component.scss
+++ b/src/app/components/sections/welcome-banner-section/welcome-banner-section.component.scss
@@ -3,7 +3,7 @@
 @import '../../../styles/typography';
 
 .welcome-banner-section-container {
-  background-color: linear-gradient($color-cerise-600, $color-primary-cerise) !important;
+  background-color: linear-gradient($color-cerise-600, $color-cerise-500) !important;
   background: url('/assets/images/home-header-background.jpg') !important;
   background-size: cover !important;
   background-repeat: no-repeat !important;
