--- a/src/app/components/tabs/basic-tabs/basic-tabs.component.scss
+++ b/src/app/components/tabs/basic-tabs/basic-tabs.component.scss
@@ -7,7 +7,7 @@
   padding: 0 !important;
 
   &.active {
-    border-bottom: 4px solid $color-primary-cerise;
+    border-bottom: 4px solid $color-cerise-500;
     color: $color-gray-500;
   }
 }
