--- a/src/app/styles/semantic-ui-modifications.scss
+++ b/src/app/styles/semantic-ui-modifications.scss
@@ -99,11 +99,11 @@ textarea {
 }
 
 .ui.pink {
-  color: $color-primary-cerise !important;
+  color: $color-cerise-500 !important;
 }
 
 .ui.inverted.pink.menu {
-  background-color: $color-primary-cerise !important;
+  background-color: $color-cerise-500 !important;
   color: $white !important;
 }
 
@@ -112,12 +112,12 @@ textarea {
 }
 
 .ui.pink.header {
-  color: $color-primary-cerise !important;
+  color: $color-cerise-500 !important;
 }
 
 .ui.pink.label, .ui.pink.labels .label {
-  background-color: $color-primary-cerise !important;
-  border-color: $color-primary-cerise !important;
+  background-color: $color-cerise-500 !important;
+  border-color: $color-cerise-500 !important;
 }
 
 // Modify lef and right sidebar dimensions
