Pages can make navbar transparent when top scrolled if they want to

--- a/src/app/components/navbars/app-navbar/app-navbar.component.scss
+++ b/src/app/components/navbars/app-navbar/app-navbar.component.scss
@@ -71,7 +71,7 @@
 
         .arrow-icon {
           color: $white;
-          margin-left: 5px;
+          margin-right: 5px;
         }
       }
     }
