--- a/src/app/components/menus/language-menu/language-menu.component.scss
+++ b/src/app/components/menus/language-menu/language-menu.component.scss
@@ -18,9 +18,11 @@
     padding-top: 10px;
     display: flex;
     align-items: center;
+    margin-bottom: 50px;
+    width: 100%;
 
     .language-menu-logo-container-logo {
-      width: 140px;
+      width: 50%;
       border-right: 1px solid $color-cerise-500;
       display: flex;
       align-items: center;
@@ -30,7 +32,7 @@
     }
 
     .language-menu-logo-container-text {
-      width: 140px;
+      width: 50%;
       display: flex;
       align-items: center;
       justify-content: flex-start;
