Did a service implementation instead of jquery on transparent navbar when top scrolled on certain pages.

--- a/src/app/components/layouts/default-layout/default-layout.component.scss
+++ b/src/app/components/layouts/default-layout/default-layout.component.scss
@@ -19,7 +19,7 @@
     background: $white;
     width: inherit;
 
-    .layout-header-padder {
+    .layout-navbar-padder {
       display: table-row;
       height: $navbar-height;
     }
