Show preview message if on a preview job page

--- a/src/app/components/sections/job-banner-section/job-banner-section.component.scss
+++ b/src/app/components/sections/job-banner-section/job-banner-section.component.scss
@@ -6,6 +6,9 @@
   background: $white url('/assets/images/job-background-computer.jpg') no-repeat center bottom !important;
   background-size: cover !important;
   height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 
   @media screen and (max-width: $mobile-max-width) {
     height: 200px;
