Filled job stamp is now green

--- a/src/app/components/cards/application-status-card/application-status-card.component.scss
+++ b/src/app/components/cards/application-status-card/application-status-card.component.scss
@@ -3,7 +3,7 @@
 
 .job-item-container {
   width: 140px;
-  background-color: $default-bg-color;
+  background-color: $white;
   border-radius: 8px;
   box-shadow: 0 2px 6px 0 rgba(0,0,0,0.4);
   cursor: pointer;
