--- a/src/app/components/pages/contact-page/contact-page.component.scss
+++ b/src/app/components/pages/contact-page/contact-page.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/colors';
 
 .contact-form-container {
-  background-color: $default-bg-color;
+  background-color: $white;
 
   .contact-form-description {
     margin: 0 auto;
