--- a/src/app/components/text/basic-title-text/basic-title-text.component.scss
+++ b/src/app/components/text/basic-title-text/basic-title-text.component.scss
@@ -68,6 +68,10 @@
   color: $color-gray-300 !important;
 }
 
+.green {
+  color: $color-green-font !important;
+}
+
 .center {
   text-align: center;
 }
