--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -210,7 +210,7 @@ li:before {
   color: $black;
   font-weight: bold;
   font-size: 1em;
-  vertical-align: middle;
+  vertical-align: top;
   line-height: $text-line-height;
   padding: 0 0.3em;
 }
