--- a/src/app/components/modals/stepper-modal/stepper-modal.component.scss
+++ b/src/app/components/modals/stepper-modal/stepper-modal.component.scss
@@ -13,6 +13,6 @@
   .modal-content {
     display: flex;
     justify-content: center;
-    margin: 50px 20px;
+    margin: 20px 20px 50px 20px;
   }
 }
