Added a city autocomplete input component

--- a/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
+++ b/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
@@ -1,4 +1,5 @@
 <form
+  (keydown.enter)="$event.preventDefault()"
   [@slideInLeftOutLeftAnimation]="animationState"
   (ngSubmit)="submitForm()"
   #form="ngForm"
