--- a/src/app/components/pages/subscriptions-page/subscriptions-page.component.scss
+++ b/src/app/components/pages/subscriptions-page/subscriptions-page.component.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/colors';
 @import '../../../styles/dimensions';
 
-.subscribe-page-grid {
+.subscriptions-page-grid {
   background: $color-gray-25 url('/assets/images/light-pattern-background.jpg') repeat !important;
 }
