Split base button component into a navigation button and a action button component to allow crawling

--- a/src/app/components/buttons/base-action-button/base-action-button.component.scss
+++ b/src/app/components/buttons/base-action-button/base-action-button.component.scss
@@ -6,6 +6,7 @@ $button-font-arabic: $text-font-family-arabic;
 
 // GENERAL
 .btn {
+  display: inline-block;
   border-radius: 8px;
   border: 2px solid;
   font-family: $button-font;
