--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -14,12 +14,12 @@
       [text]="'register.form.login.section' | translate">
     </form-section-title-text>
 
-    <base-button
+    <base-action-button
       (click)="loginButonClicked()"
       [buttonText]="'register.form.login.button' | translate"
       kind="primary"
       size="small">
-    </base-button>
+    </base-action-button>
 
   </div>
 
