Guide navigation base layout

--- a/src/app/components/cards/guide-card/guide-card.component.scss
+++ b/src/app/components/cards/guide-card/guide-card.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/colors';
+@import '../../../styles/dimensions';
 
 .guide-card {
   padding: 15px;
-  border-radius: 10px;
   overflow: hidden;
 }
