--- a/src/app/components/navigations/guide-navigation/guide-navigation.component.scss
+++ b/src/app/components/navigations/guide-navigation/guide-navigation.component.scss
@@ -1,9 +1,9 @@
 @import '../../../styles/colors';
 
 .guide-navigation {
-  border-left: 1px solid rgba(0, 0, 0, .3);
+  border-left: 1px solid rgba(0, 0, 0, .2);
   padding-left: 20px;
-  margin-left: 25px;
+  margin-left: 15px;
 }
 
 .guide-nav-section-title {
@@ -11,7 +11,7 @@
   margin-bottom: 10px;
   padding-left: 15px !important;
 
-  &:not(first-of-type) {
+  &:not(:first-of-type) {
     margin-top: 35px;
   }
 
