--- a/src/app/components/pagers/card-pager/card-pager.component.scss
+++ b/src/app/components/pagers/card-pager/card-pager.component.scss
@@ -4,31 +4,46 @@
 
 .pager-container {
   margin-top: 1rem;
+
+  @media screen and (max-width: $mobile-max-width) {
+    background-color: $color-gray-800;
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    z-index: 3;
+  }
 }
 
 .pagination-location {
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100%;
   justify-content: center;
   text-align: center;
+
+  @media screen and (max-width: $mobile-max-width) {
+    color: $white;
+    flex-direction: row;
+  }
 
   .section-indicator {
     align-items: center;
     background-color: $color-cerise-500;
     border-radius: 50%;
     color: $white !important;
-    display: flex;
+    display: inline-flex;
     font-size: 12px;
     font-weight: bold;
     height: 30px;
     justify-content: center;
-    margin: 0 auto;
     width: 30px;
 
     @media screen and (max-width: $mobile-max-width) {
-      width: 25px;
       height: 25px;
+      margin: 0 1rem;
+      width: 25px;
     }
   }
 }
@@ -38,9 +53,14 @@
   color: $color-cerise-500;
   cursor: pointer;
   display: flex;
+  height: 100%;
 
   & > i {
     margin-right: 1rem;
+  }
+
+  @media screen and (max-width: $mobile-max-width) {
+    color: $white;
   }
 }
 
@@ -56,4 +76,8 @@
 
 .pagination-button-text {
   color: $black;
+
+  @media screen and (max-width: $mobile-max-width) {
+    display: none;
+  }
 }
