Add secondary-navigation component with guide menu

--- a/src/app/components/pagers/card-pager/card-pager.component.scss
+++ b/src/app/components/pagers/card-pager/card-pager.component.scss
@@ -9,9 +9,10 @@
     background-color: $color-gray-800;
     bottom: 0;
     left: 0;
+    height: 60px;
     position: fixed;
     right: 0;
-    z-index: 3;
+    z-index: 5;
   }
 }
 
