Fix compile error

--- a/src/app/components/pages/guide-section-page/guide-section-page.component.scss
+++ b/src/app/components/pages/guide-section-page/guide-section-page.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/colors';
+@import '../../../styles/dimensions';
 
 .guide-section {
   background-color: rgba(240, 240, 240, 1);
