Maintain 100% height to keep background

--- a/src/app/components/pages/guide-page/guide-page.component.scss
+++ b/src/app/components/pages/guide-page/guide-page.component.scss
@@ -5,6 +5,7 @@
   background-color: rgba(240, 240, 240, 1);
   background: url('/assets/images/desk-background.jpg') no-repeat;
   background-size: 100% 400px;
+  height: 100%;
 
   &:before {
     content: '';
