Add support for condensed contact cards

--- a/src/app/components/cards/contact-card/contact-card.component.scss
+++ b/src/app/components/cards/contact-card/contact-card.component.scss
@@ -8,6 +8,9 @@
     padding-left: 0;
     img {
       border-top-left-radius: 4px;
+      &.condensed {
+        border-bottom-left-radius: 4px;
+      }
     }
   }
 
